--- a/css.css
+++ b/css.css
@@ -26,6 +26,9 @@
 	font-weight: bold;
 }
 	td  {
-background: #fafafa;
-text-align: center;	
+	background: #fafafa;
+	text-align: center;	
+}
+  	table { 
+	margin: 10px 50px 0px 75px;
 }
