--- a/css.css
+++ b/css.css
@@ -3,16 +3,16 @@
 	font-family: Helvetica; background-color: #cc5400
 }
 	h1 {
-	font-size: 38px; 
+	font-size: 24px; 
 	font-family: Impact, sans-serif; 
-	color: #ed6c00; 
+	color: #6309a8; 
 	border-bottom: thin black solid;
 }
 	ul {border-radius: 14px; 
-	border: 3px solid #773100;
+	border: 3px solid #;
 }
 	table { 
-	color: #ff7a1b;
+	color: #ff1d1d;
 	font-family: Helvetica;
 	width: 1050px; 
 	border-collapse: collapse;
