--- a/navigation.css
+++ b/navigation.css
@@ -4,12 +4,14 @@
 	box-sizing: border-box;
 	font-size: 24px; /*1em /1rem/100% */
 }
-
+body {
+	background-color: #93643a
+}
 .clearfix {
 	overflow: auto;
 }
 .horizontal-nav {
-	background-color: #d8d8d8;
+	background-color: #93643a;
 	margin: 0;
 	padding: 0;
 }
@@ -31,11 +33,12 @@
 	list-style: none;
 	font-size: 1rem;
 	font-family: 'Century Gothic';
-	font-color: #D8d8d8;
+	font-color: #93643a;
 }
 .horizontal-nav li a:hover {
 	color: white;
 }
+
 .horizontal-nav a {
 	padding: .8rem .5rem;
 	display: #242628;
@@ -63,7 +66,7 @@
 	list-size: 1rem;
 	font-size: 1rem;
 	font-family: 'Century Gothic';
-	font-color: #D8d8d8;
+	font-color: #522b09;
 	opacity: 0.51
 }
 #sidebar {
@@ -74,6 +77,6 @@
 	list-style: none;
 	font-size: 1rem;
 	font-family: 'Century Gothic';
-	font-color: #D8d8d8;
+	font-color: #Ba8a5f;
 	opacity: 0.51;
 }
