--- a/navigation.css
+++ b/navigation.css
@@ -11,7 +11,7 @@ body {
 	overflow: auto;
 }
 .horizontal-nav {
-	background-color: #93643a;
+	background-color: white;
 	margin: 0;
 	padding: 0;
 }
@@ -41,7 +41,7 @@ body {
 
 .horizontal-nav a {
 	padding: .8rem .5rem;
-	display: #242628;
+	display: #522b09;
 	text-decoration: none;
 	font-weight: normal;
 	font-size: 1rem;
